# yantra-research-lab

./: .env.example  .gitignore  Makefile  README.md  SETUP.md  WEBAPP.md  fable.md  load_env.py  pyproject.toml
.github/workflows/: ci.yml  ingest.yml
api/: README.md
architecture/: 01-strategy-research.md  02-data-ingestion.md  02a-data-ingestion-asbuilt.md  03-memory.md  04-guardrails-rbac.md  05-frontend-product.md  06-observability.md  07-model-routing-finetune.md  08-deployment-aws.md  README.md
architecture/diagrams/: tier3-architecture.excalidraw
backend/: .dockerignore  .gitignore  Dockerfile  README.md  app.py  embeddings.py  fly.toml  guardrails.py  ingest.py  metrics.py  observability.py  pyproject.toml  requirements.txt  retriever.py
backend/seed_corpus/: 01-mean-reversion.md  02-zscore-bollinger.md  03-backtesting-parity.md  04-sharpe-risk-adjusted.md  05-drawdown.md  06-options-greeks.md  07-walk-forward.md  08-capture-factor.md
backend/tests/: test_guardrails.py
chatbot/: README.md
docs/: DESIGN_LOG.md  architecture.md  wireframe.html
docs/adr/: 0001-public-synthetic-engine.md  0002-mcp-wrap-the-engine.md  0003-bounded-autonomy.md  0004-monorepo-and-environment-promotion.md  0005-public-demo-deployment.md  0006-auth-rbac.md
eval/: README.md  __init__.py  run_gate.py
frontend/: .gitignore  README.md  package-lock.json  package.json  tailwind.config.ts
frontend/public/data/: ingestion.json  (+2 more)
infra/: README.md
ingestion/: README.md  __init__.py  caption.py  config.py  discover.py  enrich.py  fetch.py  figures.py  graph.py  index.py  llm.py  parse.py  quality.py  requirements.txt  run.py  state.py  storage.py
ingestion/tests/: test_pipeline.py
knowledge_base/: README.md  seed_papers.md
knowledge_base/eval_sets/: rag_golden.jsonl  redteam_leak.jsonl
mcp_server/: __init__.py  server.py
ops/: README.md
research_lab/: __init__.py  memory.py  run.py  schemas.py  supervisor.py
research_lab/agents/: __init__.py  backtester.py  evaluator.py  proposer.py
scripts/: generate_run.py
slm_regime_classifier/: README.md
synthetic_engine/: __init__.py  engine.py
tests/: test_smoke.py
(+21 files in other folders)
